syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.zache";
option java_outer_classname = "ZcacheRpcProto";

package zcacherpc;

// The greeter service definition.
service ZacheProto {
    // 获取单个value
    rpc InGetKey(Data) returns(Data){}
    // 获取全部key/value
    rpc InGetKeys(Data) returns(stream Data){}
    // 设置key/value
    rpc InSetValue(Data) returns(Data){}
    // 删除key
    rpc InDeleteKey(Data) returns(Data){}
    // 导出数据
    rpc InExport(Data) returns(Data){}
    // 导入数据
    rpc InImport(Data) returns(Data){}
    // 删除所有数据
    rpc InDeleteKeys(Data) returns(Data){}
    // 扩容
    rpc InExpension(Data) returns(Data){}
    // 获取key个数
    rpc InGetKeyNum(Data) returns(Data){}
    // key加一
    rpc InKeyIncr(Data) returns(Data){}
    // key加n
    rpc InKeyIncrBy(Data) returns(Data){}
    // key减一
    rpc InKeyDecr(Data) returns(Data){}
    // key减n
    rpc InKeyDecrBy(Data) returns(Data){}
    // 提交事务
    rpc InCommit(Data) returns(Data){}
    // 丢弃事务
    rpc InDrop(Data) returns(Data){}

    //外部接口
    // 获取单个value
    rpc Get(Data) returns(Data){}
    // 删除key
    rpc DeleteKey(Data) returns(Data){}
    // 设置key/value
    rpc SetValue(Data) returns(Data){}
    // 更新key/value
    rpc UpdateValue(Data) returns(Data){}
    // 获取全部key/value
    rpc GetKeys(Data) returns(stream Data){}
    // 导出数据
    rpc Export(Data) returns(Data){}
    // 导入数据
    rpc Import(Data) returns(Data){}
    // 删除所有数据
    rpc DeleteKeys(Data) returns(Data){}
    // 扩容
    rpc Expension(Data) returns(Data){}
    // 获取key个数
    rpc GetKeyNum(Data) returns(Data){}
    // key加一
    rpc Incr(Data) returns(Data){}
    // key加n
    rpc IncrBy(Data) returns(Data){}
    // key减一
    rpc Decr(Data) returns(Data){}
    // key减n
    rpc DecrBy(Data) returns(Data){}
    // 从redis导入数据
    rpc ImportFromRedis(Data) returns(Data){}
    // 导出数据至redis
    rpc ExportToRedis(Data) returns(Data){}

    // 两阶段提交-预提交接口
     // 删除key
    rpc PreDeleteKey(Data) returns(CommitIDMsg){}
    // 设置key/value
    rpc PreSetValue(Data) returns(CommitIDMsg){}
    // 更新key/value
    rpc PreUpdateValue(Data) returns(CommitIDMsg){}
    // 删除所有数据
    rpc PreDeleteKeys(Data) returns(CommitIDMsg){}
    // 扩容
    rpc PreExpension(Data) returns(CommitIDMsg){}
    // key加一
    rpc PreIncr(Data) returns(CommitIDMsg){}
    // key加n
    rpc PreIncrBy(Data) returns(CommitIDMsg){}
    // key减一
    rpc PreDecr(Data) returns(CommitIDMsg){}
    // key减n
    rpc PreDecrBy(Data) returns(CommitIDMsg){}
    // 从redis导入数据
    rpc PreImportFromRedis(Data) returns(CommitIDMsg){}

    // 提交事务
    rpc Commit(CommitIDMsg) returns(CommitIDMsg){}
    // 丢弃事务
    rpc Drop(CommitIDMsg) returns(CommitIDMsg){}

}

message Data {
    string key = 1;
    string value = 2;
}

message CommitIDMsg{
    string CommitID = 3;
}